# analyser

./: .gitignore  Procfile  README.md  app.py  app_analyser.py  app_metrics.py  charts.py  constants.py  download.py  mcp_client.py  optimize.py  parser.py  pyproject.toml  requirements-dev.txt  requirements.txt  rxconfig.py  symbols.py  symbols_dicts.py  utils_charts.py  utils_parser.py
.github/workflows/: .flake8  python-lint.yml
analyser/: charts.py  constants.py  data.py  download.py  optimize.py  parse.py  parser.py  plots.py  static_xai_indiv_v2.py  symbols.py  utils_app.py  utils_charts.py  utils_parser.py  utils_plots.py
analyser/app/: charts.py  constants.py  parser.py  utils.py
data/: A17U.SI.csv  A35.SI.csv  A68U.SI.csv  AAXJ.csv  ACV.SI.csv  ACWI.csv  AJBU.SI.csv  AU8U.SI.csv  AW9U.SI.csv  BMGU.SI.csv  BTOU.SI.csv  BUOU.SI.csv  BWCU.SI.csv  BYI.SI.csv  C2PU.SI.csv  C38U.SI.csv  C61U.SI.csv  CFA.SI.csv  CJLU.SI.csv  CLR.SI.csv  CMOU.SI.csv  CNNU.SI.csv  CRPU.SI.csv  CY6U.SI.csv  D05.SI.csv  D5IU.SI.csv  EEM.csv  EIMI.L.csv  ES3.SI.csv  G3B.SI.csv  HMN.SI.csv  IEUR.csv  IWDA.L.csv  J69U.SI.csv  J85.SI.csv  J91U.SI.csv  JYEU.SI.csv  K2LU.SI.csv  K71U.SI.csv  LIW.SI.csv  (+29 more)
notebooks/: test_fred.ipynb
pm/: __init__.py  config.yaml  data.py  datastream.py  download.py  parse.py  portfolio.py  symbols.py  ta.py  update.py
pm/app/: charts.py  data.py  summary.py  trend.py  utils.py
reflex_app/: __init__.py  mcp_server.py  reflex_app.py
samples/: ACWI.csv  URTH.csv
