[project]
name = "analyser"
version = "0.1.0"
description = "analyser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "omegaconf>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.2",
    "streamlit>=1.44.1",
    "ta>=0.11.0",
    "tqdm>=4.67.1",
    "xlrd>=2.0.1",
    "yfinance>=0.2.55",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]
